--- a/doc/conf_environment.py.in
+++ b/doc/conf_environment.py.in
@@ -1,6 +1,5 @@
 # -*- coding: utf-8 -*-
 
-SPHINXDOC_PATH='@SPHINX_SRC_DIR@/doc'
 TRUNK_PATH='@SPHINX_SRC_DIR@'
-EXCLUDEBASE_PATH='doc/'
-DOC_BUILD_DIR='@DOXYGEN_BUILD_DIR@/'
+SPHINXDOC_PATH='@SPHINX_SRC_DIR@/doc'
+DOC_BUILD_DIR='@DOXYGEN_BUILD_DIR@'
