sphinx gallery until small utf8 problem

--- a/doc/conf_environment.py.in
+++ b/doc/conf_environment.py.in
@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
 
 TRUNK_PATH='@SPHINX_SRC_DIR@'
-SPHINXDOC_PATH='@SPHINX_SRC_DIR@/doc'
-DOC_BUILD_DIR='@DOXYGEN_BUILD_DIR@'
+SPHINXDOC_PATH='@SPHINX_SRC_DIR@/doc/'
+DOC_BUILD_DIR='@SPHINX_BUILD_DIR@/doc/'
+DOXY_BUILD_DIR='@DOXYGEN_BUILD_DIR@'
