added option to run all tests to pg.test(), closes #19

--- a/python/tests/Makefile
+++ b/python/tests/Makefile
@@ -1,12 +1,10 @@
 all: test
 
+tests: test
+
 clean:
 	rm -rf *.vector *.bmat *.bms *.matrix __pycache__
 
 test:
-	echo "####################"
-	echo "Running all tests..."
-	echo "####################"
-	sleep 1
 	python -c "import pygimli; pygimli.test(show=False)"
-	py.test .
+	py.test
