small win64 tweak

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" ST
     set(CMAKE_CXX_FLAGS_RELEASE "-O2 -Os -pipe -ansi -Wall -Wno-long-long -Wno-unused-result -Wno-unused-variable")
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-unused-value -Wno-strict-aliasing -Wno-unused-local-typedefs")
 #     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g -rdynamic")
+    #-Wl,--no-undefined 
+    #set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Os -static-libgcc -Wl,-O2 -Wl,--as-needed -Wl,--sort-common")
  
     set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Os")
     #set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Os -static-libgcc")
@@ -94,7 +96,6 @@ include(CheckIncludeFileCXX)
 
 if (PYVERSION)
     set(Python_ADDITIONAL_VERSIONS ${PYVERSION})
-    #set(Python_ADDITIONAL_VERSIONS 3.4 3.3 3.2 2.7)
 endif()
 find_package(PythonInterp) # find version belongs to the active python command
 
@@ -186,7 +187,6 @@ ENDIF(WIN32)
 ################################################################################
 # Check for python stuff
 ################################################################################
-
 if (WIN32)
 	get_filename_component(PYTHONPATH "${PYTHON_EXECUTABLE}" PATH )
     if (${ADDRESSMODEL} EQUAL 32)
