--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -24,6 +24,8 @@
 
 #define UMFPACK_FOUND @UMFPACK_FOUND@
 
+#define OPENBLAS_FOUND @OPENBLAS_FOUND@
+
 #define USE_IPC @USE_IPC@
 
 #define READPROC_FOUND @READPROC_FOUND@
