--- a/apps/traveltime/CMakeLists.txt
+++ b/apps/traveltime/CMakeLists.txt
@@ -7,6 +7,7 @@ set( PROGRAMS ttinv
 )
 
 foreach(program ${PROGRAMS})
+    add_dependencies(apps ${program})
     add_executable(${program} ${program}.cpp)
     target_link_libraries(${program} gimli)
     #target_link_libraries(polyfit ${libgimli_TARGET_NAME} gimli)
