--- a/apps/misc/CMakeLists.txt
+++ b/apps/misc/CMakeLists.txt
@@ -2,7 +2,9 @@
 
 set( PROGRAMS bms2vtk invlinearmat )
 
+
 foreach(program ${PROGRAMS})
+    add_dependencies(apps ${program})
     add_executable(${program} ${program}.cpp)
     target_link_libraries(${program} gimli)
     install(TARGETS ${program}
