--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,9 @@ if (NOT Boost_INCLUDE_DIR)
         get_filename_component(BOOST_ROOT "${BOOST_ROOT}" ABSOLUTE)
         set(Boost_INCLUDE_DIR ${BOOST_ROOT}/include)
     else()
-       
+        if (NOT WIN32)
+            find_package(Boost 1.46.0 COMPONENTS system thread)
+        endif()
         # we should think about cmake superbuild with ExternalProject_Add as the replacement for find_or_build_package (next generation)
         if (NOT Boost_INCLUDE_DIR)
             FILE(READ "${EXTERNAL_DIR}/.boost-py${PYTHON_VERSION_MAJOR}.dist" BOOST_DIST_NAME)
@@ -128,7 +130,7 @@ if (NOT Boost_INCLUDE_DIR)
                 message(STATUS "BOOST_ROOT does not exist: ${BOOST_ROOT}")	
             ENDIF()
         endif()
-         find_or_build_package_check(Boost boost Boost_INCLUDE_DIR False)
+        find_or_build_package_check(Boost boost Boost_INCLUDE_DIR False)
         #exit()
     endif(BOOST_ROOT)
     message(STATUS "BOOST_ROOT, ${BOOST_ROOT}")
