--- a/.travis.yml
+++ b/.travis.yml
@@ -3,33 +3,23 @@
 # Before commiting changes to this file, check consistency on http://lint.travis-ci.org/
 
 language: cpp
-compiler: gcc
-python: 2.7
+compiler: clang
+python: 3.4
 os: linux
 
 virtualenv:
     system_site_packages: true
-          
+
+cache:
+    - pip
+    directories:
+    - thirdParty
+
 before_install:
     # We use apt-get to save time, because travis' free build time limit is 50 min.
-
-    # Travis uses cmake 2.8.7 by default (too old for gimli)
-    - sudo add-apt-repository ppa:kalakris/cmake -y
-    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-    - sudo add-apt-repository --yes ppa:boost-latest/ppa
     - sudo apt-get update -qq
     - sudo apt-get install -qq cmake
-
-    # Newer gcc, because 4.6 caused weird assembler bug
-    - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
-    - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
-    - gcc --version
-    - g++ --version
-
-    # Boost 1.55
-    - sudo apt-get install -qq libboost-system1.55-dev libboost-thread1.55-dev libboost-python1.55-dev
+    - sudo apt-get install -qq libboost-system-dev libboost-thread-dev libboost-python-dev
 
     # Main build dependencies
     - sudo apt-get install -qq build-essential libcppunit-dev
@@ -46,7 +36,7 @@ before_install:
 install:
     # Show Infos
     - uname -a
-    - gcc --version
+    - clang --version
     - python --version
     - cmake --version
     - python -c "import numpy; print(numpy.__version__)"
@@ -60,7 +50,7 @@ install:
     - cmake ../trunk
     - make -j 4 gimli
     - make pygimli J=4
-      
+
 script:
     # Test gimli
     - make check
@@ -72,5 +62,6 @@ script:
 
     # Test pygimli
     - export PYTHONPATH=$PYTHONPATH:`pwd`/../trunk/python
-    - python -c "import pygimli; print(pygimli.__version__)"
-    - make doc 
+    - python -c "import pygimli; pygimli.test(onlydoctests=False, htmlreport='build_tests.html')"
+    - chmod +x ../trunk/python/apps/*
+    - make doc
