--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ cache:
 before_install:
     # APT-GET (should be reduced or better removed completely)
     - sudo apt-get update -qq
+    - sudo apt-get install -qq libclang-3.6-dev llvm-3.6-dev
     - sudo apt-get install -qq libblas-dev liblapack-dev
     - sudo apt-get install -qq libsuitesparse-dev
 
@@ -38,8 +39,7 @@ before_install:
     - DEPS="cmake boost numpy matplotlib sphinx"
     - conda create -q -n gimli python=$TRAVIS_PYTHON_VERSION $DEPS
     - source activate gimli
-    - pip install -r doc/requirements.txt
-    - conda install -c http://conda.anaconda.org/numba llvmdev
+    - pip install -r doc/requirements.txt # documentation requirements
 
 install:
     # Show Infos
@@ -71,5 +71,3 @@ script:
     # Test pygimli
     - export PYTHONPATH=$PYTHONPATH:`pwd`/../trunk/python
     - python -c "import pygimli; pygimli.test(onlydoctests=False, htmlreport='build_tests.html')"
-    - chmod +x ../trunk/python/apps/*
-    - make doc
