--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,24 @@ python:
 
 #sudo: false # activates new container-based infrastructure (faster)
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.7
+    packages:
+      - llvm-3.7
+      - clang-3.7
+      - libclang1-3.7
+      - libclang-3.7-dev
+
 cache:
     directories:
     - thirdParty
-    
+
 before_install:
     # APT-GET (should be reduced or better removed completely)
     - sudo apt-get update -qq
-    - sudo apt-get install -qq libclang-3.6-dev llvm-3.6-dev
     - sudo apt-get install -qq libblas-dev liblapack-dev
     - sudo apt-get install -qq libsuitesparse-dev
 
