--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,10 @@
 
 language: cpp
 
-os:
-    - linux
-    - osx
-
 sudo: required
 
 compiler: clang
+
 matrix:
   include:
     - env: PYVERSION=2.7
@@ -43,7 +40,7 @@ cache:
 
 before_install:
     - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; brew --version; fi
-    - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew unlink boost; fi
+    - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew unlink boost cmake; fi
     - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew install llvm36 cmake boost boost-python; fi
     - if [ "PYVERSION" == "2.7" ]; then
         wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
