--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,11 @@ env:
     - PYVERSION=2.7
     - PYVERSION=3.4
 
-
 # Don't try py2 build on MacOSX
-matrix:
-  exclude:
-    - os: osx
-      env: PYVERSION=2.7
+#matrix:
+  #exclude:
+    #- os: osx
+      #env: PYVERSION=2.7
 
 addons:
   apt:
@@ -44,13 +43,20 @@ cache:
     - thirdParty
 
 before_install:
-    - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; brew --version; fi
-    - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew unlink boost cmake; fi
-    - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew install llvm36 cmake boost boost-python; fi
+    #- if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; brew --version; fi
+    #- if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew unlink boost cmake; fi
+    #- if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew install llvm36 cmake boost boost-python; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+        OSNAME="MacOSX";
+        brew update;
+        brew install llvm36;
+      elif [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        OSNAME="Linux";
+      fi
     - if [ "PYVERSION" == "2.7" ]; then
-        wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+        wget https://repo.continuum.io/miniconda/Miniconda-latest-$OSNAME-x86_64.sh -O miniconda.sh;
         else
-        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+        wget https://repo.continuum.io/miniconda/Miniconda3-latest-$OSNAME-x86_64.sh -O miniconda.sh;
         fi
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
