activate linux builds again

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ sudo: required
 compiler: clang
 
 os:
-    #- linux
+    - linux
     - osx
 
 env:
@@ -51,7 +51,7 @@ before_install:
         OSNAME="MacOSX";
         brew update;
         brew unlink boost cmake;
-        brew install llvm36 --with-clang --with-asan;
+        #brew install llvm36 --with-clang;
         brew install cmake boost boost-python libconfig;
       elif [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         OSNAME="Linux";
