--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ os:
     - linux
     - osx
 
+osx_image: xcode7.1
+
 env:
     global:
     - CXX="clang++-3.6"
@@ -31,6 +33,8 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     - llvm-toolchain-precise-3.6
+    - ppa:kalakris/cmake
+    - ppa:boost-latest/ppa
     packages:
     - clang-3.6
     - libclang-3.6-dev
@@ -40,7 +44,9 @@ addons:
     - liblapack-dev
     - libsuitesparse-dev
     - libedit-dev
-    - libboost-all-dev
+    - libboost-system1.55-dev
+    - libboost-thread1.55-dev
+    - libboost-python1.55-dev
 
 cache:
     directories:
@@ -90,10 +96,6 @@ install:
     - make pygimli J=4
 
 script:
-    # Test gimli
-    - make check
-    - ./bin/gimliUnitTest
-
     # Make sure that interactive matplotlib backends work
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
