--- a/.travis.yml
+++ b/.travis.yml
@@ -2,66 +2,18 @@
 # See build results on http://travis-ci.org/gimli-org/gimli
 # Before commiting changes to this file, check consistency on http://lint.travis-ci.org/
 
-language: python
+language: cpp
 compiler: clang
-python: 3.4
-os: linux
+os:
+    - linux
+    - osx
 
-virtualenv:
-    system_site_packages: true
-
-cache:
-    - pip
-    directories:
-    - thirdParty
-
-before_install:
-    # We use apt-get to save time, because travis' free build time limit is 50 min.
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq cmake
-    - sudo apt-get install -qq libboost-system-dev libboost-thread-dev libboost-python-dev
-
-    # Main build dependencies
-    - sudo apt-get install -qq build-essential libcppunit-dev
-    - if [[ $TRAVIS_PYTHON_VERSION == "2.7" ]]; then sudo apt-get install -qq python-dev python-numpy; fi
-    - if [[ $TRAVIS_PYTHON_VERSION == "3.2" ]]; then sudo apt-get install -qq python3-dev python3-numpy; fi
-    - sudo apt-get install -qq libblas-dev liblapack-dev
-    - sudo apt-get install -qq libsuitesparse-dev
-
-    # Documentation dependencies
-    - sudo apt-get install -qq doxygen doxygen-latex dvipng python-scipy
-    - sudo apt-get build-dep -qq python-matplotlib python-sphinx
-    - sudo pip install -q -U sphinx numpydoc pybtex sphinxcontrib-programoutput sphinxcontrib-bibtex matplotlib
+osx_image: xcode7.2b2
 
 install:
-    # Show Infos
-    - uname -a
-    - clang --version
-    - python --version
-    - cmake --version
-    - python -c "import numpy; print(numpy.__version__)"
+    - curl -sL http://install.pygimli.org | bash
 
-    # Main build
-    - mkdir trunk
-    - shopt -s extglob
-    - mv !(trunk) trunk # necessary because of lib and thirdParty backcopying
-    - mkdir build
-    - cd build
-    - cmake ../trunk
-    - make -j 4 gimli
-    - make pygimli J=4
-
-script:
-    # Test gimli
-    - make check
-    - ./bin/gimliUnitTest
-
-    # Make sure that interactive matplotlib backends work
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
-
-    # Test pygimli
-    - export PYTHONPATH=$PYTHONPATH:`pwd`/../trunk/python
-    - python -c "import pygimli; pygimli.test(onlydoctests=False, htmlreport='build_tests.html')"
-    - chmod +x ../trunk/python/apps/*
-    - make doc
+notifications:
+email:
+    recipients:
+    - mail@pygimli.org
